chore(tests): add sortKey checks in all evaluation tests
